--- a/style.css
+++ b/style.css
@@ -19,3 +19,27 @@
     width: 350px;
     height: 350px;
 }
+#lightbox-overlay {
+    opacity: 0;
+    pointer-events: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, .8);
+}
+#lightbox-overlay.visible {
+    opacity: 1;
+    pointer-events: auto;
+}
+#lightbox-image {
+    display: block;
+    width: 70%;
+    height: 90vh;
+    align-items: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
