--- a/style.css
+++ b/style.css
@@ -3,13 +3,15 @@
     padding: 0;
 }
 .gallery-container {
-    width: 100%;
-    height: 100vh;
 }
 .gallery {
+    width: 100%;
+    height: 100vh;
+    padding: 10px 20px;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     gap: 30px;
+    box-sizing: border-box;
 }
 .gallery li {
     list-style: none;
@@ -18,6 +20,8 @@
     display: block;
     width: 350px;
     height: 350px;
+    border: 1px solid rgba(0, 0, 0, .8);
+    box-shadow: 0 0 10px #000;
 }
 #lightbox-overlay {
     opacity: 0;
