--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@
     width: 100%;
     height: 100vh;
     background-color: rgba(0, 0, 0, .8);
+    transition: all .5s;
 }
 #lightbox-overlay.visible {
     opacity: 1;
