[css] overlay 시 좀 더 입체적인 효과를 위해 boxshadow 및 border 추가

--- a/style.css
+++ b/style.css
@@ -13,10 +13,10 @@
     gap: 30px;
     box-sizing: border-box;
 }
-.gallery li {
+.gallery .image {
     list-style: none;
 }
-.gallery li img {
+.gallery .image img {
     display: block;
     width: 350px;
     height: 350px;
@@ -40,11 +40,14 @@
 }
 #lightbox-image {
     display: block;
-    width: 70%;
+    width: 50%;
     height: 90vh;
     align-items: center;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    border: 1px solid #000;
+    box-shadow: 0 0 20px #fff;
+    border-radius: 20px;
 }
